fix post list on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -222,7 +222,7 @@ nav#globalnav {
         @media #{$small-device}, #{$medium-device} {
           @include show();
           animation: fadeInUp 2s $default-ease;
-          
+
           display: block;
           position: absolute;
           top: 14px;
@@ -540,6 +540,10 @@ div.post-list {
   margin: -1rem;
   display: flex;
   animation: fadeInUp 1.2s $default-ease;
+
+  @media #{$small-device} {
+    animation: fadeInUpSmall 1.2s $default-ease;
+  }
 
   &.post-list--one,
   &.post-list--two {
@@ -1399,6 +1403,17 @@ footer {
   from {
     opacity: 0;
     transform: translate3d(0, 10%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUpSmall {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 4%, 0);
   }
   to {
     opacity: 1;
